--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,6 +17,14 @@ body {
 	color: lightgrey;
 	font-size: 15px;
 }
+li:hover{
+	height: 8px;
+
+}
+	li {
+	height: 10px;
+	transition: height 2s;
+}
 .centrar {
 	text-align: center;
 }
@@ -65,12 +73,13 @@ h3 {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
-
 	text-align: center;
 	text-align: center;
 	box-shadow: 5px 5px 9px 8px black;
 	justify-content: center;
 	align-items: center;
+
+	
 }
 
 
@@ -86,12 +95,29 @@ h3 {
 	gap: 2rem;
 
 }
+li a:hover{
+	height: 30px;
+}
 li a {
 	text-decoration: none;
-	
 	margin: 4px;
 	padding: 10px 20px;
+	transition: all 2s;
+
 }
+/*img :hover {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		height: 2rem;
+		width: 1rem;
+		justify-content: center;
+		align-items: center;
+}
+img  {
+	transform: scale(2,2);
+}*/
+
 
 .menuEnCaja{
 	
@@ -178,6 +204,7 @@ header nav {
 	flex-wrap: wrap;
 	gap: 2rem;
 	padding: 50px;
+
 }
 
 /*Grids*/
